force-app/main/provider-payments/objects/Provider_Payment__c/Provider_Payment__c.object-meta.xml
<CustomObject>
    <label>Provider Payment</label>
    <nameField>
        <displayFormat>PPMNT-{000000}</displayFormat>
        <label>Provider payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>