force-app/main/provider-payments/objects/Provider_Payment__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>orientation</fullName>
            </value>
            <value>
                <fullName>screener1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>