force-app/main/provider-payments/objects/Provider_Payment__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>