force-app/main/provider-payments/objects/Provider_Payment__c/fields/Billable_Code__c.field-meta.xml
<CustomField>
    <fullName>Billable_Code__c</fullName>
    <label>Billable Code</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>