force-app/main/provider-payments/objects/Provider_Payment__c/fields/Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Status__c</fullName>
    <label>Data Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>