force-app/main/provider-payments/objects/Provider_Payment__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>