force-app/main/provider-payments/objects/Provider_Payment__c/fields/Physicians_Name__c.field-meta.xml
<CustomField>
    <fullName>Physicians_Name__c</fullName>
    <label>Physicians Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>