force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Provider_City__c</fullName>
    <label>Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>