force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_Country__c.field-meta.xml
<CustomField>
    <fullName>Provider_Country__c</fullName>
    <label>Provider Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>