force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <label>Provider ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>