force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Postal_Code__c</fullName>
    <label>Provider Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>