force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Provider_State__c</fullName>
    <label>Provider State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>