force-app/main/provider-payments/objects/Provider_Payment__c/fields/Provider_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Street_Address__c</fullName>
    <label>Provider Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>