force-app/main/provider-payments/objects/Provider_Payment__c/fields/Randomization_ID__c.field-meta.xml
<CustomField>
    <fullName>Randomization_ID__c</fullName>
    <label>Randomization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>