force-app/main/provider-payments/objects/Provider_Payment__c/fields/Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Id__c</fullName>
    <label>Referral Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>