force-app/main/provider-payments/objects/Provider_Payment__c/fields/Study_Code__c.field-meta.xml
<CustomField>
    <fullName>Study_Code__c</fullName>
    <label>Protocol ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>